cafelang.output
State 159 conflicts: 2 reduce/reduce
State 183 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: toplevel_list

    2 toplevel_list: ε
    3              | toplevel_list toplevel

    4 toplevel: receita
    5         | reacao
    6         | decl_global
    7         | stmt

    8 receita: RECEITA STRING bloco_receita

    9 bloco_receita: LBRACE bloco_receita_items RBRACE

   10 bloco_receita_items: ε
   11                    | bloco_receita_items bloco_receita_item

   12 bloco_receita_item: decl_senso
   13                   | decl_local
   14                   | stmt
   15                   | ato SEMICOLON

   16 reacao: QUANDO evento_tipo ARROW ato SEMICOLON

   17 evento_tipo: PRONTO
   18            | ERRO
   19            | SEM_AGUA
   20            | SUPERAQUECIMENTO
   21            | SEM_COPO
   22            | PORTA_ABERTA

   23 decl_senso: PERFIL LBRACE perf_items RBRACE SEMICOLON
   24           | TEMPERATURA medida_temp SEMICOLON
   25           | EXTRAIR medida_vol EM medida_tempo SEMICOLON
   26           | PRESSAO_ALVO NUMBER BAR SEMICOLON

   27 perf_items: ε
   28           | perf_items perf_item

   29 perf_item: CORPO nivel SEMICOLON
   30          | ACIDEZ nivel SEMICOLON
   31          | AROMA nivel SEMICOLON
   32          | INTENSIDADE nivel SEMICOLON

   33 nivel: SUAVE
   34      | MEDIO
   35      | FORTE
   36      | INTENSO

   37 decl_global: decl

   38 decl_local: decl

   39 decl: var_decl
   40     | const_decl

   41 var_decl: DEF IDENTIFIER COLON tipo SEMICOLON
   42         | DEF IDENTIFIER COLON tipo ASSIGN_OP expr SEMICOLON

   43 const_decl: CONST IDENTIFIER COLON tipo ASSIGN_OP expr SEMICOLON

   44 tipo: NUM_TYPE
   45     | BOOL_TYPE
   46     | TEXTO_TYPE
   47     | ML_TYPE
   48     | G_TYPE
   49     | S_TYPE
   50     | MS_TYPE
   51     | CELSIUS_TYPE

   52 stmt: assign SEMICOLON
   53     | if_stmt
   54     | while_stmt
   55     | repeat_stmt
   56     | for_range_stmt
   57     | SAIR SEMICOLON
   58     | PULAR SEMICOLON
   59     | bloco

   60 bloco: LBRACE bloco_items RBRACE

   61 bloco_items: ε
   62            | bloco_items bloco_item

   63 bloco_item: decl
   64           | stmt
   65           | ato SEMICOLON

   66 assign: lvalue ASSIGN_OP expr

   67 lvalue: IDENTIFIER

   68 if_stmt: SE LPAREN expr RPAREN stmt
   69        | SE LPAREN expr RPAREN stmt SENAO stmt

   70 while_stmt: ENQUANTO LPAREN expr RPAREN stmt

   71 repeat_stmt: REPETIR expr VEZES bloco

   72 for_range_stmt: PARA IDENTIFIER EM expr RANGE expr bloco

   73 ato: acao
   74    | acao argumentos

   75 acao: MOER
   76     | AQUECER
   77     | BOMBEAR
   78     | SERVIR
   79     | VAPORIZAR
   80     | PAUSAR
   81     | TOCAR
   82     | LIMPAR
   83     | ENXAGUAR
   84     | DESPRESSURIZAR

   85 argumentos: arg
   86           | argumentos COMMA arg

   87 arg: expr
   88    | medida_vol
   89    | medida_peso
   90    | medida_temp
   91    | medida_tempo
   92    | STRING

   93 expr: logic_or

   94 logic_or: logic_and
   95         | logic_or OU logic_and
   96         | logic_or OR_OP logic_and

   97 logic_and: equality
   98          | logic_and E equality
   99          | logic_and AND_OP equality

  100 equality: relational
  101         | equality EQ_OP relational
  102         | equality NE_OP relational

  103 relational: additive
  104           | relational LT_OP additive
  105           | relational LE_OP additive
  106           | relational GT_OP additive
  107           | relational GE_OP additive

  108 additive: multiplicative
  109         | additive PLUS multiplicative
  110         | additive MINUS multiplicative

  111 multiplicative: unary
  112               | multiplicative MULT unary
  113               | multiplicative DIV unary
  114               | multiplicative MOD unary

  115 unary: primary
  116      | PLUS unary
  117      | MINUS unary
  118      | NOT unary
  119      | NAO unary

  120 primary: NUMBER
  121        | bool_literal
  122        | STRING
  123        | sensor_zeroarg
  124        | lvalue
  125        | LPAREN expr RPAREN

  126 bool_literal: VERDADEIRO
  127             | FALSO

  128 sensor_zeroarg: sensor_nome LPAREN RPAREN

  129 sensor_nome: TEMP
  130            | PRESSAO
  131            | AGUA
  132            | GRAOS
  133            | FLUXO
  134            | COPO
  135            | PORTA

  136 medida_vol: NUMBER ML_TYPE

  137 medida_peso: NUMBER G_TYPE

  138 medida_tempo: NUMBER S_TYPE
  139             | NUMBER MS_TYPE

  140 medida_temp: NUMBER CELSIUS_UNIT
  141            | NUMBER C_UNIT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    RECEITA (258) 8
    QUANDO (259) 16
    PERFIL (260) 23
    TEMPERATURA (261) 24
    EXTRAIR (262) 25
    EM (263) 25 72
    PRESSAO_ALVO (264) 26
    PRONTO (265) 17
    ERRO (266) 18
    SEM_AGUA (267) 19
    SUPERAQUECIMENTO (268) 20
    SEM_COPO (269) 21
    PORTA_ABERTA (270) 22
    SUAVE (271) 33
    MEDIO (272) 34
    FORTE (273) 35
    INTENSO (274) 36
    CORPO (275) 29
    ACIDEZ (276) 30
    AROMA (277) 31
    INTENSIDADE (278) 32
    DEF (279) 41 42
    CONST (280) 43
    NUM_TYPE (281) 44
    BOOL_TYPE (282) 45
    TEXTO_TYPE (283) 46
    ML_TYPE (284) 47 136
    G_TYPE (285) 48 137
    S_TYPE (286) 49 138
    MS_TYPE (287) 50 139
    CELSIUS_TYPE (288) 51
    SE (289) 68 69
    SENAO (290) 69
    ENQUANTO (291) 70
    REPETIR (292) 71
    VEZES (293) 71
    PARA (294) 72
    SAIR (295) 57
    PULAR (296) 58
    MOER (297) 75
    AQUECER (298) 76
    BOMBEAR (299) 77
    SERVIR (300) 78
    VAPORIZAR (301) 79
    PAUSAR (302) 80
    TOCAR (303) 81
    LIMPAR (304) 82
    ENXAGUAR (305) 83
    DESPRESSURIZAR (306) 84
    TEMP (307) 129
    PRESSAO (308) 130
    AGUA (309) 131
    GRAOS (310) 132
    FLUXO (311) 133
    COPO (312) 134
    PORTA (313) 135
    VERDADEIRO (314) 126
    FALSO (315) 127
    OU (316) 95
    E (317) 98
    NAO (318) 119
    OR_OP (319) 96
    AND_OP (320) 99
    EQ_OP (321) 101
    NE_OP (322) 102
    LE_OP (323) 105
    GE_OP (324) 107
    LT_OP (325) 104
    GT_OP (326) 106
    ASSIGN_OP (327) 42 43 66
    ARROW (328) 16
    RANGE (329) 72
    BAR (330) 26
    CELSIUS_UNIT (331) 140
    C_UNIT (332) 141
    LBRACE (333) 9 23 60
    RBRACE (334) 9 23 60
    LPAREN (335) 68 69 70 125 128
    RPAREN (336) 68 69 70 125 128
    SEMICOLON (337) 15 16 23 24 25 26 29 30 31 32 41 42 43 52 57 58 65
    COLON (338) 41 42 43
    COMMA (339) 86
    PLUS (340) 109 116
    MINUS (341) 110 117
    MULT (342) 112
    DIV (343) 113
    MOD (344) 114
    NOT (345) 118
    IDENTIFIER <str> (346) 41 42 43 67 72
    STRING <str> (347) 8 92 122
    NUMBER <num> (348) 26 120 136 137 138 139 140 141
    UMINUS (349)
    UPLUS (350)


Nonterminals, with rules where they appear

    $accept (96)
        on left: 0
    program (97)
        on left: 1
        on right: 0
    toplevel_list (98)
        on left: 2 3
        on right: 1 3
    toplevel (99)
        on left: 4 5 6 7
        on right: 3
    receita (100)
        on left: 8
        on right: 4
    bloco_receita (101)
        on left: 9
        on right: 8
    bloco_receita_items (102)
        on left: 10 11
        on right: 9 11
    bloco_receita_item (103)
        on left: 12 13 14 15
        on right: 11
    reacao (104)
        on left: 16
        on right: 5
    evento_tipo (105)
        on left: 17 18 19 20 21 22
        on right: 16
    decl_senso (106)
        on left: 23 24 25 26
        on right: 12
    perf_items (107)
        on left: 27 28
        on right: 23 28
    perf_item (108)
        on left: 29 30 31 32
        on right: 28
    nivel (109)
        on left: 33 34 35 36
        on right: 29 30 31 32
    decl_global (110)
        on left: 37
        on right: 6
    decl_local (111)
        on left: 38
        on right: 13
    decl (112)
        on left: 39 40
        on right: 37 38 63
    var_decl (113)
        on left: 41 42
        on right: 39
    const_decl (114)
        on left: 43
        on right: 40
    tipo (115)
        on left: 44 45 46 47 48 49 50 51
        on right: 41 42 43
    stmt (116)
        on left: 52 53 54 55 56 57 58 59
        on right: 7 14 64 68 69 70
    bloco (117)
        on left: 60
        on right: 59 71 72
    bloco_items (118)
        on left: 61 62
        on right: 60 62
    bloco_item (119)
        on left: 63 64 65
        on right: 62
    assign (120)
        on left: 66
        on right: 52
    lvalue (121)
        on left: 67
        on right: 66 124
    if_stmt (122)
        on left: 68 69
        on right: 53
    while_stmt (123)
        on left: 70
        on right: 54
    repeat_stmt (124)
        on left: 71
        on right: 55
    for_range_stmt (125)
        on left: 72
        on right: 56
    ato (126)
        on left: 73 74
        on right: 15 16 65
    acao (127)
        on left: 75 76 77 78 79 80 81 82 83 84
        on right: 73 74
    argumentos (128)
        on left: 85 86
        on right: 74 86
    arg (129)
        on left: 87 88 89 90 91 92
        on right: 85 86
    expr (130)
        on left: 93
        on right: 42 43 66 68 69 70 71 72 87 125
    logic_or (131)
        on left: 94 95 96
        on right: 93 95 96
    logic_and (132)
        on left: 97 98 99
        on right: 94 95 96 98 99
    equality (133)
        on left: 100 101 102
        on right: 97 98 99 101 102
    relational (134)
        on left: 103 104 105 106 107
        on right: 100 101 102 104 105 106 107
    additive (135)
        on left: 108 109 110
        on right: 103 104 105 106 107 109 110
    multiplicative (136)
        on left: 111 112 113 114
        on right: 108 109 110 112 113 114
    unary (137)
        on left: 115 116 117 118 119
        on right: 111 112 113 114 116 117 118 119
    primary (138)
        on left: 120 121 122 123 124 125
        on right: 115
    bool_literal (139)
        on left: 126 127
        on right: 121
    sensor_zeroarg (140)
        on left: 128
        on right: 123
    sensor_nome (141)
        on left: 129 130 131 132 133 134 135
        on right: 128
    medida_vol (142)
        on left: 136
        on right: 25 88
    medida_peso (143)
        on left: 137
        on right: 89
    medida_tempo (144)
        on left: 138 139
        on right: 25 91
    medida_temp (145)
        on left: 140 141
        on right: 24 90


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (toplevel_list)

    program        go to state 1
    toplevel_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: toplevel_list •
    3 toplevel_list: toplevel_list • toplevel

    RECEITA     shift, and go to state 4
    QUANDO      shift, and go to state 5
    DEF         shift, and go to state 6
    CONST       shift, and go to state 7
    SE          shift, and go to state 8
    ENQUANTO    shift, and go to state 9
    REPETIR     shift, and go to state 10
    PARA        shift, and go to state 11
    SAIR        shift, and go to state 12
    PULAR       shift, and go to state 13
    LBRACE      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 1 (program)

    toplevel        go to state 16
    receita         go to state 17
    reacao          go to state 18
    decl_global     go to state 19
    decl            go to state 20
    var_decl        go to state 21
    const_decl      go to state 22
    stmt            go to state 23
    bloco           go to state 24
    assign          go to state 25
    lvalue          go to state 26
    if_stmt         go to state 27
    while_stmt      go to state 28
    repeat_stmt     go to state 29
    for_range_stmt  go to state 30


State 3

    0 $accept: program $end •

    $default  accept


State 4

    8 receita: RECEITA • STRING bloco_receita

    STRING  shift, and go to state 31


State 5

   16 reacao: QUANDO • evento_tipo ARROW ato SEMICOLON

    PRONTO            shift, and go to state 32
    ERRO              shift, and go to state 33
    SEM_AGUA          shift, and go to state 34
    SUPERAQUECIMENTO  shift, and go to state 35
    SEM_COPO          shift, and go to state 36
    PORTA_ABERTA      shift, and go to state 37

    evento_tipo  go to state 38


State 6

   41 var_decl: DEF • IDENTIFIER COLON tipo SEMICOLON
   42         | DEF • IDENTIFIER COLON tipo ASSIGN_OP expr SEMICOLON

    IDENTIFIER  shift, and go to state 39


State 7

   43 const_decl: CONST • IDENTIFIER COLON tipo ASSIGN_OP expr SEMICOLON

    IDENTIFIER  shift, and go to state 40


State 8

   68 if_stmt: SE • LPAREN expr RPAREN stmt
   69        | SE • LPAREN expr RPAREN stmt SENAO stmt

    LPAREN  shift, and go to state 41


State 9

   70 while_stmt: ENQUANTO • LPAREN expr RPAREN stmt

    LPAREN  shift, and go to state 42


State 10

   71 repeat_stmt: REPETIR • expr VEZES bloco

    TEMP        shift, and go to state 43
    PRESSAO     shift, and go to state 44
    AGUA        shift, and go to state 45
    GRAOS       shift, and go to state 46
    FLUXO       shift, and go to state 47
    COPO        shift, and go to state 48
    PORTA       shift, and go to state 49
    VERDADEIRO  shift, and go to state 50
    FALSO       shift, and go to state 51
    NAO         shift, and go to state 52
    LPAREN      shift, and go to state 53
    PLUS        shift, and go to state 54
    MINUS       shift, and go to state 55
    NOT         shift, and go to state 56
    IDENTIFIER  shift, and go to state 15
    STRING      shift, and go to state 57
    NUMBER      shift, and go to state 58

    lvalue          go to state 59
    expr            go to state 60
    logic_or        go to state 61
    logic_and       go to state 62
    equality        go to state 63
    relational      go to state 64
    additive        go to state 65
    multiplicative  go to state 66
    unary           go to state 67
    primary         go to state 68
    bool_literal    go to state 69
    sensor_zeroarg  go to state 70
    sensor_nome     go to state 71


State 11

   72 for_range_stmt: PARA • IDENTIFIER EM expr RANGE expr bloco

    IDENTIFIER  shift, and go to state 72


State 12

   57 stmt: SAIR • SEMICOLON

    SEMICOLON  shift, and go to state 73


State 13

   58 stmt: PULAR • SEMICOLON

    SEMICOLON  shift, and go to state 74


State 14

   60 bloco: LBRACE • bloco_items RBRACE

    $default  reduce using rule 61 (bloco_items)

    bloco_items  go to state 75


State 15

   67 lvalue: IDENTIFIER •

    $default  reduce using rule 67 (lvalue)


State 16

    3 toplevel_list: toplevel_list toplevel •

    $default  reduce using rule 3 (toplevel_list)


State 17

    4 toplevel: receita •

    $default  reduce using rule 4 (toplevel)


State 18

    5 toplevel: reacao •

    $default  reduce using rule 5 (toplevel)


State 19

    6 toplevel: decl_global •

    $default  reduce using rule 6 (toplevel)


State 20

   37 decl_global: decl •

    $default  reduce using rule 37 (decl_global)


State 21

   39 decl: var_decl •

    $default  reduce using rule 39 (decl)


State 22

   40 decl: const_decl •

    $default  reduce using rule 40 (decl)


State 23

    7 toplevel: stmt •

    $default  reduce using rule 7 (toplevel)


State 24

   59 stmt: bloco •

    $default  reduce using rule 59 (stmt)


State 25

   52 stmt: assign • SEMICOLON

    SEMICOLON  shift, and go to state 76


State 26

   66 assign: lvalue • ASSIGN_OP expr

    ASSIGN_OP  shift, and go to state 77


State 27

   53 stmt: if_stmt •

    $default  reduce using rule 53 (stmt)


State 28

   54 stmt: while_stmt •

    $default  reduce using rule 54 (stmt)


State 29

   55 stmt: repeat_stmt •

    $default  reduce using rule 55 (stmt)


State 30

   56 stmt: for_range_stmt •

    $default  reduce using rule 56 (stmt)


State 31

    8 receita: RECEITA STRING • bloco_receita

    LBRACE  shift, and go to state 78

    bloco_receita  go to state 79


State 32

   17 evento_tipo: PRONTO •

    $default  reduce using rule 17 (evento_tipo)


State 33

   18 evento_tipo: ERRO •

    $default  reduce using rule 18 (evento_tipo)


State 34

   19 evento_tipo: SEM_AGUA •

    $default  reduce using rule 19 (evento_tipo)


State 35

   20 evento_tipo: SUPERAQUECIMENTO •

    $default  reduce using rule 20 (evento_tipo)


State 36

   21 evento_tipo: SEM_COPO •

    $default  reduce using rule 21 (evento_tipo)


State 37

   22 evento_tipo: PORTA_ABERTA •

    $default  reduce using rule 22 (evento_tipo)


State 38

   16 reacao: QUANDO evento_tipo • ARROW ato SEMICOLON

    ARROW  shift, and go to state 80


State 39

   41 var_decl: DEF IDENTIFIER • COLON tipo SEMICOLON
   42         | DEF IDENTIFIER • COLON tipo ASSIGN_OP expr SEMICOLON

    COLON  shift, and go to state 81


State 40

   43 const_decl: CONST IDENTIFIER • COLON tipo ASSIGN_OP expr SEMICOLON

    COLON  shift, and go to state 82


State 41

   68 if_stmt: SE LPAREN • expr RPAREN stmt
   69        | SE LPAREN • expr RPAREN stmt SENAO stmt

    TEMP        shift, and go to state 43
    PRESSAO     shift, and go to state 44
    AGUA        shift, and go to state 45
    GRAOS       shift, and go to state 46
    FLUXO       shift, and go to state 47
    COPO        shift, and go to state 48
    PORTA       shift, and go to state 49
    VERDADEIRO  shift, and go to state 50
    FALSO       shift, and go to state 51
    NAO         shift, and go to state 52
    LPAREN      shift, and go to state 53
    PLUS        shift, and go to state 54
    MINUS       shift, and go to state 55
    NOT         shift, and go to state 56
    IDENTIFIER  shift, and go to state 15
    STRING      shift, and go to state 57
    NUMBER      shift, and go to state 58

    lvalue          go to state 59
    expr            go to state 83
    logic_or        go to state 61
    logic_and       go to state 62
    equality        go to state 63
    relational      go to state 64
    additive        go to state 65
    multiplicative  go to state 66
    unary           go to state 67
    primary         go to state 68
    bool_literal    go to state 69
    sensor_zeroarg  go to state 70
    sensor_nome     go to state 71


State 42

   70 while_stmt: ENQUANTO LPAREN • expr RPAREN stmt

    TEMP        shift, and go to state 43
    PRESSAO     shift, and go to state 44
    AGUA        shift, and go to state 45
    GRAOS       shift, and go to state 46
    FLUXO       shift, and go to state 47
    COPO        shift, and go to state 48
    PORTA       shift, and go to state 49
    VERDADEIRO  shift, and go to state 50
    FALSO       shift, and go to state 51
    NAO         shift, and go to state 52
    LPAREN      shift, and go to state 53
    PLUS        shift, and go to state 54
    MINUS       shift, and go to state 55
    NOT         shift, and go to state 56
    IDENTIFIER  shift, and go to state 15
    STRING      shift, and go to state 57
    NUMBER      shift, and go to state 58
